--- a/index.html
+++ b/index.html
@@ -2,91 +2,91 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Köppen-Geiger Globe - Mapbox</title>
+  <title>Köppen-Geiger Globe</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
   <style>
-    /* your existing styles, unmodified */
+    html, body { margin:0; padding:0; height:100% }
+    #map { width:100%; height:100% }
+    .popup-image { max-width:100%; max-height:150px }
+    /* your controlWrapper styles */
   </style>
 </head>
 <body>
-<div id="map"></div>
+  <div id="map"></div>
 
-<div id="controlWrapper">
-  <!-- controls unchanged -->
-</div>
+  <script>
+    // 1. Helpers
+    function generateMaskedCoords(lat, lon, radiusKm) {
+      const R = 6371000;
+      const distance = Math.random()*radiusKm*1000;
+      const angle = Math.random()*2*Math.PI;
+      const δLat = distance*Math.cos(angle)/R;
+      const δLon = distance*Math.sin(angle)/(R*Math.cos(lat*Math.PI/180));
+      return [ lon + δLon*180/Math.PI, lat + δLat*180/Math.PI ];
+    }
 
-<script>
-  mapboxgl.accessToken = 'pk.eyJ1IjoiYXJjaHdydGgiLCJhIjoiY21hZHZpb3Y0MDB3czJxcjZxNjMyNjV5ayJ9.Z5pVSBUcI3HDeALtF6YIiA';
+    function createGeoJSONCircle(center, radiusKm, points=64) {
+      const lat = center[1], lon = center[0];
+      const coords = [], dX = radiusKm/111.32, dY = radiusKm/110.574;
+      for (let i=0; i<points; i++){
+        const θ = 2*Math.PI*i/points;
+        coords.push([ lon + dX*Math.cos(θ), lat + dY*Math.sin(θ) ]);
+      }
+      coords.push(coords[0]);
+      return { type:'Feature', geometry:{ type:'Polygon', coordinates:[coords] } };
+    }
 
-  const map = new mapboxgl.Map({
-    container: 'map',
-    style: 'mapbox://styles/mapbox/satellite-v9',
-    projection: 'globe',
-    zoom: 1.5,
-    center: [39.271406, -7.046950],
-    pitch: 0,
-    bearing: 0
-  });
+    // 2. Map init
+    mapboxgl.accessToken = 'pk.eyJ1IjoiYXJjaHdydGgiLCJhIjoiY21hZHZpb3Y0MDB3czJxcjZxNjMyNjV5ayJ9.Z5pVSBUcI3HDeALtF6YIiA';
+    const map = new mapboxgl.Map({
+      container: 'map', style: 'mapbox://styles/mapbox/satellite-v9',
+      projection: 'globe', zoom:1.5, center:[39.271406,-7.046950]
+    });
 
-  map.on('style.load', () => map.setFog({}));
+    map.on('style.load', () => map.setFog({}));
 
-  map.on('load', () => {
-    // climate layer unchanged
+    map.on('load', () => {
+      // load your GeoJSON of climate layers as before
+      map.addSource('koppen',{ type:'geojson', data:'./koppen.json' });
+      map.addLayer({ id:'koppen-layer', type:'fill', source:'koppen',
+        paint:{ 'fill-color':['get','fill'], 'fill-opacity':0.5 } });
 
-    // load point data
-    fetch('pins.json')
-      .then(res => res.json())
-      .then(points => {
-        points.forEach(pt => {
-          // apply masking if needed
+      // dynamically load pins
+      fetch('pins.json').then(r=>r.json()).then(points=>{
+        points.forEach(pt=>{
           const coords = pt.gdpr
             ? generateMaskedCoords(pt.latitude, pt.longitude, pt.radiusKm)
             : [pt.longitude, pt.latitude];
 
-          // marker + popup
-          new mapboxgl.Marker({ color: pt.colour })
-            .setLngLat(coords)
-            .setPopup(new mapboxgl.Popup().setHTML(
-              `<a href="${pt.link}" target="_blank" rel="noopener noreferrer" style="text-decoration:none;color:inherit;font-family:'Ubuntu',sans-serif;">
+          new mapboxgl.Marker({ color: pt.colour }).setLngLat(coords)
+            .setPopup(new mapboxgl.Popup().setHTML(`
+              <a href="${pt.link}" target="_blank" rel="noopener noreferrer"
+                 style="text-decoration:none;color:inherit;font-family:sans-serif">
                 <strong>${pt.title}</strong><br>
                 ${pt.address}<br>
-                <span style="color:${pt.zoneColour};">${pt.zoneText}</span><br>
+                <span style="color:${pt.zoneColour}">${pt.zoneText}</span><br>
                 ${pt.gdpr ? '<em>Marked area is not exact.</em><br>' : ''}
                 <img class="popup-image" src="${pt.imageUrl}" alt="${pt.title}" />
-              </a>`
-            ))
+              </a>`))
             .addTo(map);
 
-          // optional circle
           if (pt.gdpr) {
-            const circleGeoJSON = createGeoJSONCircle(coords, pt.radiusKm);
-            const srcId = `circle-${pt.id}`;
-            map.addSource(srcId, { type: 'geojson', data: circleGeoJSON });
-            map.addLayer({
-              id: `${srcId}-fill`,
-              type: 'fill',
-              source: srcId,
-              paint: { 'fill-color': pt.colour, 'fill-opacity': 0.15 }
-            });
-            map.addLayer({
-              id: `${srcId}-line`,
-              type: 'line',
-              source: srcId,
-              paint: { 'line-color': pt.colour, 'line-width': 1 }
-            });
+            const circle = createGeoJSONCircle(coords, pt.radiusKm);
+            const id = `circle-${pt.id}`;
+            map.addSource(id, { type:'geojson', data: circle });
+            map.addLayer({ id:`${id}-fill`, type:'fill', source:id,
+              paint:{ 'fill-color':pt.colour,'fill-opacity':0.15 } });
+            map.addLayer({ id:`${id}-line`, type:'line', source:id,
+              paint:{ 'line-color':pt.colour,'line-width':1 } });
           }
         });
       });
 
-    // navigation control
-    map.addControl(new mapboxgl.NavigationControl({ showCompass: false }), 'top-right');
-  });
+      map.addControl(new mapboxgl.NavigationControl({ showCompass:false }),'top-right');
+    });
 
-  // include your existing helper functions:
-  // createGeoJSONCircle(), generateMaskedCoords(), toggle handlers, etc.
-</script>
+  </script>
 </body>
 </html>
