--- a/index.html
+++ b/index.html
@@ -20,19 +20,22 @@
       padding: 8px 12px;
       border-radius: 6px;
       box-shadow: 0 0 6px rgba(0,0,0,0.15);
-      z-index: 10;
+      z-index: 1000;
       max-width: 300px;
       font-family: 'Ubuntu', sans-serif;
+      pointer-events: auto;
     }
 
     .toggle-button {
+      display: block;
       cursor: pointer;
       background: none;
       border: none;
       font-size: 18px;
-      /* removed forced width */
+      width: fit-content;
       text-align: left;
       padding: 6px 0;
+      pointer-events: auto;
     }
 
     #opacityControls,
@@ -86,20 +89,19 @@
   </div>
 
   <script>
-    // Helper: anonymise coordinates if GDPR is required
+    // Generate masked coords if GDPR
     function generateMaskedCoords(lat, lon, radiusKm) {
       const R = 6371000;
-      const distance = Math.random() * radiusKm * 1000;
-      const angle = Math.random() * 2 * Math.PI;
-      const δLat = distance * Math.cos(angle) / R;
-      const δLon = distance * Math.sin(angle) / (R * Math.cos(lat * Math.PI / 180));
-      return [ lon + δLon * 180/Math.PI, lat + δLat * 180/Math.PI ];
+      const dist = Math.random() * radiusKm * 1000;
+      const ang = Math.random() * 2 * Math.PI;
+      const dLat = dist * Math.cos(ang) / R;
+      const dLon = dist * Math.sin(ang) / (R * Math.cos(lat * Math.PI/180));
+      return [ lon + dLon * 180/Math.PI, lat + dLat * 180/Math.PI ];
     }
 
-    // Helper: create a mask circle
+    // Create mask circle
     function createGeoJSONCircle(center, radiusKm, points = 64) {
-      const lat = center[1], lon = center[0];
-      const coords = [];
+      const lat = center[1], lon = center[0], coords = [];
       const dX = radiusKm / (111.32 * Math.cos(lat * Math.PI/180));
       const dY = radiusKm / 110.574;
       for (let i = 0; i < points; i++) {
@@ -110,78 +112,51 @@
       return { type: 'Feature', geometry: { type: 'Polygon', coordinates: [coords] } };
     }
 
-    // Initialise map
+    // Init map
     mapboxgl.accessToken = 'pk.eyJ1IjoiYXJjaHdydGgiLCJhIjoiY21hZHZpb3Y0MDB3czJxcjZxNjMyNjV5ayJ9.Z5pVSBUcI3HDeALtF6YIiA';
-    const map = new mapboxgl.Map({
-      container: 'map',
-      style: 'mapbox://styles/mapbox/satellite-v9',
-      projection: 'globe',
-      zoom: 1.5,
-      center: [39.271406, -7.046950],
-      pitch: 0,
-      bearing: 0
-    });
+    const map = new mapboxgl.Map({ container:'map', style:'mapbox://styles/mapbox/satellite-v9', projection:'globe', zoom:1.5, center:[39.271406,-7.046950] });
 
     map.on('style.load', () => map.setFog({}));
 
     map.on('load', () => {
       // Climate layer
-      map.addSource('koppen', { type: 'geojson', data: './koppen.json' });
-      map.addLayer({
-        id: 'koppen-layer',
-        type: 'fill',
-        source: 'koppen',
-        paint: { 'fill-color': ['get', 'fill'], 'fill-opacity': 0.5 }
-      });
+      map.addSource('koppen',{ type:'geojson', data:'./koppen.json' });
+      map.addLayer({ id:'koppen-layer', type:'fill', source:'koppen', paint:{ 'fill-color':['get','fill'], 'fill-opacity':0.5 } });
 
       // Opacity control
       document.getElementById('opacitySlider').addEventListener('input', e => {
         map.setPaintProperty('koppen-layer','fill-opacity', parseFloat(e.target.value));
       });
 
-      // Load dynamic pins
-      fetch('pins.json')
-        .then(res => res.json())
-        .then(points => {
-          points.forEach(pt => {
-            const coords = pt.gdpr
-              ? generateMaskedCoords(pt.latitude, pt.longitude, pt.radiusKm)
-              : [pt.longitude, pt.latitude];
-
-            new mapboxgl.Marker({ color: pt.colour })
-              .setLngLat(coords)
-              .setPopup(new mapboxgl.Popup().setHTML(`
-                <strong>${pt.title}</strong><br>
-                ${pt.address}<br>
-                <span style="color:${pt.zoneColour};">${pt.zoneText}</span><br>
-                ${pt.gdpr ? '<em>Marked area is not exact.</em><br>' : ''}
-                <img class="popup-image" src="${pt.imageUrl}" alt="${pt.title}" />
-              `))
-              .addTo(map);
-
-            if (pt.gdpr) {
-              const circle = createGeoJSONCircle(coords, pt.radiusKm);
-              const id = `circle-${pt.id}`;
-              map.addSource(id, { type: 'geojson', data: circle });
-              map.addLayer({ id: `${id}-fill`, type: 'fill', source: id, paint: { 'fill-color': pt.colour, 'fill-opacity': 0.15 } });
-              map.addLayer({ id: `${id}-line`, type: 'line', source: id, paint: { 'line-color': pt.colour, 'line-width': 1 } });
-            }
-          });
+      // Load pins
+      fetch('pins.json').then(r=>r.json()).then(points=>{
+        points.forEach(pt=>{
+          const coords = pt.gdpr ? generateMaskedCoords(pt.latitude,pt.longitude,pt.radiusKm) : [pt.longitude,pt.latitude];
+          new mapboxgl.Marker({ color:pt.colour }).setLngLat(coords)
+            .setPopup(new mapboxgl.Popup().setHTML(
+              `<strong>${pt.title}</strong><br>${pt.address}<br><span style="color:${pt.zoneColour};">${pt.zoneText}</span><br>${pt.gdpr?'<em>Marked area is not exact.</em><br>':''}<img class="popup-image" src="${pt.imageUrl}" alt="${pt.title}" />`
+            )).addTo(map);
+          if(pt.gdpr){
+            const circle=createGeoJSONCircle(coords,pt.radiusKm);
+            const id=`circle-${pt.id}`;
+            map.addSource(id,{type:'geojson',data:circle});
+            map.addLayer({id:`${id}-fill`,type:'fill',source:id,paint:{'fill-color':pt.colour,'fill-opacity':0.15}});
+            map.addLayer({id:`${id}-line`,type:'line',source:id,paint:{'line-color':pt.colour,'line-width':1}});
+          }
         });
+      });
 
-      // Navigation controls
-      map.addControl(new mapboxgl.NavigationControl({ showCompass: false }), 'top-right');
+      map.addControl(new mapboxgl.NavigationControl({ showCompass:false}),'top-right');
     });
 
-    // Toggle handlers
+    // Toggle handlers (single-click)
     document.getElementById('toggleOpacity').addEventListener('click', () => {
       const el = document.getElementById('opacityControls');
-      el.style.display = (el.style.display === 'none') ? 'block' : 'none';
+      el.style.display = el.style.display === 'block' ? 'none' : 'block';
     });
-
     document.getElementById('toggleLegend').addEventListener('click', () => {
       const el = document.getElementById('legendContainer');
-      el.style.display = (el.style.display === 'none') ? 'block' : 'none';
+      el.style.display = el.style.display === 'block' ? 'none' : 'block';
     });
   </script>
 </body>
